@@ -13,7 +13,7 @@ __author__ = "Angelscry"
 __url__ = "https://github.com/Angelscry/plugin.program.advanced.launcher"
 __git_url__ = "https://github.com/Angelscry/plugin.program.advanced.launcher"
 __credits__ = "Leo212 CinPoU, JustSomeUser, Zerqent, Zosky, Atsumori"
-__version__ = "2.4.4"
+__version__ = "2.4.5"
 
 if ( __name__ == "__main__" ):
     import resources.lib.launcher_plugin as plugin
